--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # Python
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+
+# Virtual environments
+.venv/
+venv/
 
 # Jupyter
 .ipynb_checkpoints/
@@ -13,6 +19,10 @@ data/processed/*
 !data/processed/.gitkeep  
 !data/processed/sample_*   
 
+# Outputs (plots, csv, results)
+outputs/*
+
 # OS / IDE files
 .DS_Store
 .vscode/
+.idea/
