--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@ venv/
 
 # Data
 data/raw/*            
-!data/raw/.gitkeep    
+!data/raw/.gitkeep   
+!data/raw/sample_* 
 
 data/processed/*      
 !data/processed/.gitkeep  
@@ -21,6 +22,7 @@ data/processed/*
 
 # Outputs (plots, csv, results)
 outputs/*
+!outputs/.gitkeep
 
 # OS / IDE files
 .DS_Store
